force-app/main/default/objects/NBA_Rule_Set_Skill__c/NBA_Rule_Set_Skill__c.object-meta.xml
<CustomObject>
    <description>Junction object between nba rule sets and skills.</description>
    <label>NBA Rule Set Skill</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NBA Rule Set Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>