force-app/main/default/objects/NBA_Rule_Set_Skill__c/fields/NBA_Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>NBA_Rule_Set__c</fullName>
    <description>Field references the NBA Rule Set record related to this skill.</description>
    <inlineHelpText>Field references the NBA Rule Set record related to this skill.</inlineHelpText>
    <label>Skill Type</label>
    <referenceTo>NBA_Rule_Set__c</referenceTo>
    <relationshipLabel>Rule Skills</relationshipLabel>
    <relationshipName>NBA_Rule_Set_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>