force-app/main/default/objects/NBA_Rule_Set_Skill__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Field sets the operator for the skill level criteria.</description>
    <inlineHelpText>Field sets the operator for the skill level criteria.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>