force-app/main/default/objects/NBA_Rule_Set_Skill__c/fields/Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>Skill_Id__c</fullName>
    <description>Field stores and references the salesforce record Id of the equivalent skill from the standard skills object.</description>
    <inlineHelpText>Field stores and references the salesforce record Id of the equivalent skill from the standard skills object.</inlineHelpText>
    <label>Skill Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>