force-app/main/default/objects/NBA_Rule_Set_Skill__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <description>Field displays the skill levels selected for the rule.</description>
    <inlineHelpText>Field displays the skill levels selected for the rule.</inlineHelpText>
    <label>Skill Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>